remove animation in crowdstart page as overflow issue - suggestion link is not shown when available section is expended

--- a/scss/kickstarter-list.scss
+++ b/scss/kickstarter-list.scss
@@ -39,12 +39,13 @@
     margin-left: $start-size/2;
   }
 
+// FIXME: overflow issue - suggestion link is not shown
   .expendable-area {
-    max-height: 100px;
-    transition: max-height 0.3s linear;
+    // max-height: 100px;
+    // transition: max-height 0.3s linear;
     &.expended {
-      max-height: 9999px;
-      transition: max-height 0.3s linear;
+      // max-height: 9999px;
+      // transition: max-height 0.3s linear;
     }
   }
 
